# liquidity-migration

./: .gitignore  .graphifyignore  .mcp.json  AGENTS.md  BACKTEST_RESEARCH_PLAN.md  CLAUDE.md  CODEX_TOOLS.md  DECISIONS.md  JOURNAL.md  README.md  STATE.md  STATUS.md  agent-orchestrator.yaml  alerting.py  backtest.py  config.py  database.py  exchange.py  execution.py  full_env.txt  indicators.py  pyproject.toml  reconcile.py  report.py  requirements.txt  signal_engine.py
.codex/: hooks.json
aggression_carry/: __init__.py  archive.py  archive_manifest.py  backtest_audit.py  binance.py  bybit.py  champion_challenger.py  cli.py  config.py  daily_close_fade.py  data_layer.py  demo_cycle.py  demo_execution.py  demo_fast_protection.py  downloaders.py  event_demo.py  features.py  forward_audit.py  forward_test.py  ingestion.py  math_utils.py  portfolio.py  research.py  storage.py  strategy_tribunal.py  sweep.py  telegram.py  trade_lifecycle.py  universe.py  volume_alpha.py  volume_backtest.py  volume_events.py  ws_risk.py
configs/: aggression_carry.default.yaml  daily_close_fade.lowcap_scam_tail_stage4_selected.yaml  daily_close_fade.lowcap_scam_tail_stage4_time_decay_tp.yaml  long_sector_map.json  sector_map.json  volume_alpha.default.yaml
deploy/: production.env.example  setup_codex_tools.py
docs/: WINDOWS_QUICKSTART.md  backtesting_errors_we_never_repeat.md  bybit_aggression_carry_system_codex_spec.md  bybit_liquidity_migration_system_codex_spec.md  creative_alpha_research_20260517.md  cross_sectional_momentum_proposal.md  daily_close_fade.md  daily_close_fade_full_listing_scam_tail_stage4_20260510.md  data_roots.md  deployment_plan_combined_book.md  event_demo_daemon.md  forward_demo_readiness.md  forward_testing.md  full_pit_rebuild_and_punchlist.md  handoff-desktop-2026-05-28.md  intraday_burst_synthesis.md  pit_gate.md  (+36 more)
(+446 files in other folders)
