[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model050426"
version = "0.1.0"
description = "Bybit aggression-carry crypto perp alpha research system."
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11,<4.0",
    "certifi>=2024.0.0",
    "duckdb>=1.0,<2",
    "numpy>=2.1,<3.0",
    "polars>=1.0,<2",
    "pyarrow>=15.0,<22",
    "pybit>=5.8,<6",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
