[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liquidity-migration"
version = "0.1.0"
description = "Bybit liquidity-migration research system."
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.0.0",
    "numpy>=2.1,<3.0",
    "Pillow>=10.0,<12",
    "polars>=1.0,<2",
    "pyarrow>=15.0,<22",
    "pybit>=5.8,<6",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
include = ["liquidity_migration*"]
